--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -11,6 +11,20 @@
 }
 
 
-a{
+a {
     text-decoration: none;
+}
+
+.custombutton {
+    background-color: #6617cb;
+    background-image: linear-gradient(315deg, #6617cb 0%, #cb218e 74%);
+    box-shadow: 0 0 0 0 #ec008c, 0.2rem 0.2rem 30px #6617cb;
+}
+
+.custombutton:hover {
+    box-shadow: 0 0 0 0 #ec008c, 0.2rem 0.2rem 60px #6617cb;
+}
+
+.linheight {
+    line-height: 1rem;
 }
