--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -28,3 +28,26 @@ a {
 .linheight {
     line-height: 1rem;
 }
+
+:root::-webkit-scrollbar {
+    z-index: 100;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
